Add should create a user test in user.test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha  --timeout 20000 --bail",
+    "test": "mocha  --timeout 20000",
     "heroku": "node index.js",
     "travis": "npm run mocha"
   },
